apps/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
  labels:
    app: node-red
spec:
  type: ClusterIP
  ports:
  - port: 1880
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: node-red
