apps/node-red/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-red
  namespace: node-red
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nodered.feto.dev`)
      kind: Rule
      services:
        - name: node-red
          port: 1880
  tls:
    secretName: node-red-tls
